--- a/manual/rockbox_interface/browsing_and_playing.tex
+++ b/manual/rockbox_interface/browsing_and_playing.tex
@@ -197,7 +197,7 @@ can be easily changed by making a text file with the required layout.  More
  at \wikilink{LoadableKeyboardLayouts}.
 
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,GIGABEAT_PAD,SANSA_E200_PAD,%
-     SANSA_C200_PAD,MROBE100_PAD}{
+     SANSA_FUZE_PAD,SANSA_C200_PAD,MROBE100_PAD}{
   \begin{table}
     \begin{btnmap}{}{}
       \ActionKbdLeft~/ \ActionKbdRight~/ \ActionKbdUp~/ \ActionKbdDown
