--- a/manual/getting_started/installation.tex
+++ b/manual/getting_started/installation.tex
@@ -238,6 +238,9 @@ housekeeping tool \caps{Rockbox Utility}. It allows you to:
 Prebuilt binaries for Windows, Linux and Mac OS X are
 available at the \wikilink{RockboxUtility} wiki page.\\
 
+\opt{gigabeats}{\note{Rockbox Utility does not currently support the Gigabeat S
+and you will therefore need to follow the manual install instructions below.\\}}
+
 When first starting \caps{Rockbox Utility} run ``Autodetect'',
 found in the configuration dialog (File $\rightarrow$ Configure). Autodetection
 can detect most player types. If autodetection fails or is unable to detect 
