Updated french translation.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23270 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -13045,3 +13045,79 @@
     *: "Aller directement à l'outro"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_STATUSBAR_CUSTOM
+  desc: if this translation is compatible with LANG_CHANNEL_CUSTOM, then please use the same translation. it can be combined later then
+  user: core
+  <source>
+    *: "Custom"
+  </source>
+  <dest>
+    *: "Personnalisée"
+  </dest>
+  <voice>
+    *: "Personnalisée"
+  </voice>
+</phrase>
+<phrase>
+  id: VOICE_EXT_SBS
+  desc: spoken only, for file extension
+  user: core
+  <source>
+    *: ""
+  </source>
+  <dest>
+    *: ""
+  </dest>
+  <voice>
+    *: "Thème barre d'état"
+  </voice>
+</phrase>
+<phrase>
+  id: VOICE_EXT_RSBS
+  desc: spoken only, for file extension
+  user: core
+  <source>
+    *: ""
+  </source>
+  <dest>
+    *: ""
+  </dest>
+  <voice>
+    *: "Thème barre d'état pour télécommande"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_CUSTOM_STATUSBAR
+  desc: browse for custom statusbar in theme settings
+  user: core
+  <source>
+    *:none
+    lcd_bitmap: "Custom Statusbar"
+  </source>
+  <dest>
+    *:none
+    lcd_bitmap: "Barre d'état personnalisée"
+  </dest>
+  <voice>
+    *:none
+    lcd_bitmap: "Barre d'état personnalisée"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_REMOTE_CUSTOM_STATUSBAR
+  desc: browse for remote custom statusbar in theme settings
+  user: core
+  <source>
+    *:none
+    remote: "Remote Custom Statusbar"
+  </source>
+  <dest>
+    *:none
+    remote: "Barre d'état personnalisée pour télécommande"
+  </dest>
+  <voice>
+    *:none
+    remote: "Barre d'état personnalisée pour télécommande"
+  </voice>
+</phrase>
